change colour scheme and correct spacing issues in header and footer

--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Barrio&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 :root {
-  --color-1: #f9b9c3;
-  --color-2: #d87cac;
+  --color-1: #BBCDE5;
+  --color-2: #639FAB;
   --color-3: #5b85aa;
-  --color-4: #004f2d;
+  --color-4: #1C5D99;
   --color-5: #ffffff;
-  --color-6: #000000;
-  --hover: #564592;
+  --color-6: #222222;
 }
 
+
 body {
-  background-color: var(--color-1);
   background-image: linear-gradient(
     315deg,
     var(--color-1) 100%,
@@ -21,13 +20,14 @@ body {
   font-family: "Inter", sans-serif;
   overflow: hidden;
   min-height: 100vh;
+  min-width: 100vw;
   margin: 0;
 }
 
 header {
   background-color: var(--color-3);
   min-height: 50px;
-  padding: 0.5rem;
+  width: 100%;
 }
 
 main {
@@ -44,7 +44,6 @@ footer {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 1rem;
   font-size: 1.5rem;
   text-align: center;
 }
@@ -70,15 +69,14 @@ main {
   color: var(--color-6);
   margin: 0;
   width: 100%;
-  padding: 0.5rem 0.5rem;
   overflow: hidden;
   display: flex;
   align-items: center;
-  justify-content:space-between;
+  justify-content:center;
 }
 
 .nav-container a:hover {
-  background-color: var(--hover);
+  background-color: var(--color-4);
 }
 
 .nav-container a {
@@ -108,7 +106,7 @@ main {
   background-color: var(--color-5);
   border-radius: 10px;
   box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
-  width: 600px;
+  width: 500px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -202,12 +200,12 @@ button {
 }
 
 button:hover {
-  background-color: var(--hover);
+  background-color: var(--color-4);
 }
 
 button:focus {
   outline: none;
-  background-color: var(--hover);
+  background-color: var(--color-4);
 }
 
 /* Images */
@@ -223,3 +221,4 @@ button:focus {
   display: flex;
   margin: auto;
 }
+
